@@ -960,3 +960,6 @@
 2015-09-06 - TAQ
 	server/classes/modules/db.h, server/classes/modules/db.cc, server/classes/modules/mysql.cc, server/classes/modules/pgsql.cc - Added C-linked wrappers, so we can continue to use the library without having to populate a vtable (in some unportable way).
 	server/classes/modules/language.h, server/classes/language.cc - Added C-linked wrappers for these too.
+
+2015-09-07 - TAQ
+	client/cache.h - It turned out that we didn't have any real way to insert things into the cache.  Instead of throwing an exception on a missing element, we'll now follow the lead of the C++ unordered_map object, and return a default object reference out of the index operator method, suitable for assignment.
